--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,5 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Lora:400,700);
+@import url(https://fonts.googleapis.com/css?family=Oswald:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+
 
 
 #menu-0 .mbr-brand__name {
@@ -26,6 +28,12 @@
 }
 #msg-box5-2 .mbr-article {
   color: #ffffff;
+}
+#features1-m P {
+  color: #000000;
+  text-align: center;
+  font-family: 'Oswald', sans-serif;
+  font-size: 16px;
 }
 #pricing-table1-8 SPAN {
   font-size: 30px;
